# GitHub_Analyzer_API

./: .gitignore  Dockerfile.api.lambda  app.py  build.sh  env_setup.sh  load.py  load_erorrs_fix.py  pyproject.toml  requirements.txt  secret.py
.github/workflows/: deploy_docs.yml  dev_push_docker_image.yml  docstring_tests.yml  flake8_check.yml  unittests.yml
lambda-api-deploy/: run.sh  run_local.sh
lambda-api-deploy/dev/: serverless_step1.yml
modules/: Retrieve_Commit_History.py  Treat_Assignment_Response.py  analyzer_utils.py  api_utils.py
notebooks/: metrics_filter.ipynb
